Finally fixced spacing issues

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* { margin: 0; padding: 0; }
+
 
 body {
     font-family: sans-serif;
@@ -6,31 +6,42 @@ body {
     color: color(22,150,54);
     line-height: 1.5;
     padding: 1px;
-    display: flex;
+    display: flex; 
     justify-content: center;
+    align-items: flex-start; 
+    flex-direction: column;
+
+}
+
+article {
+    margin: 0px;
+    padding: 0px;
 }
 
 .Pic{
     display: block;
-    width: 500px;
-    height: 500px;
+    max-width: 20%;
+    height: auto;
     margin: auto;
-    padding: 0px;
-    transform: scale(0.5, 0.5); /*translate(800px);*/
+    padding: 5px;
+    
+
+    /*transform: scale(0.5, 0.5);/* translate(800px);*/
 }
 
 .container{
-    margin: none;
-    padding: none;
-    border: none;
+    margin: auto;
+    padding: 1px 80px 120px 30px;
+    border: 30px;
     height: 200px;
 }
 
 nav {
+    display: block;
     list-style-type: none;
-	text-align: left;
+	text-align: center;
 	padding:0px;
-    margin: 0px;
+    margin: auto;
     display: flex; 
     justify-content: center;
     
@@ -40,6 +51,7 @@ p {
     margin: auto;
     text-align: center;
     text-overflow: clip;
+   
 
 
     
@@ -49,9 +61,11 @@ ul {
 
 }
 header {
-    display: flex;
+    display: block;
     justify-content: center;
     text-align: center;
+    margin: auto;
+    padding: 1px;
     
 
     
@@ -64,9 +78,9 @@ li {
   }
   
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+}
